--- a/demo/src/style.css
+++ b/demo/src/style.css
@@ -1,5 +1,12 @@
 
 #minnow-container {
-  display: flex;
-  justify-content: center;
+  margin: 0 auto;
+  padding: 0;
+}
+
+#minnow-container canvas {
+  padding: 0;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
 }
