--- a/demo/src/style.css
+++ b/demo/src/style.css
@@ -1,10 +1,10 @@
 
-#minnow-container {
+#bitmelo-container {
   margin: 0 auto;
   padding: 0;
 }
 
-#minnow-container canvas {
+#bitmelo-container canvas {
   padding: 0;
   margin-left: auto;
   margin-right: auto;
